Shortcut to confirm "Ok" with keystroke "o" in 'Unwrap (u) -> "follow active quad" (f) -> ok (o)' was removed #45713

Closed
opened 2015-08-06 22:47:53 +02:00 by Lino Thomas · 7 comments

System Information
Win 7 GTX 970

Blender Version
Broken: 2.75 official release (1.7.2015)
Worked: 2.74 official release

Description

When uwrapping objects, i heavily use shortcuts. To unwrap using "follow active quad" i just press "u f o". Easy to remember and very fast, no mouse needed.
The "o" of "u f o" doesnt work anymore, you can not confirm the unwraping options anymore.
Visually the "O" of "Ok" is not underlined as it was in the previous version, therefore indicating, that you can not press a key anymore to select it.

Exact steps for others to reproduce the error

Select a face of the standart cube.
Press "u" to open the unwrap menu.
Press "f" to select the "follow active quad" option
to confirm the settings, you have to confirm now with the mouse, click on "Ok". Earlier you just hit "o".

**System Information** Win 7 GTX 970 **Blender Version** Broken: 2.75 official release (1.7.2015) Worked: 2.74 official release **Description** When uwrapping objects, i heavily use shortcuts. To unwrap using "follow active quad" i just press "u f o". Easy to remember and very fast, no mouse needed. The "o" of "u f o" doesnt work anymore, you can not confirm the unwraping options anymore. Visually the "O" of "Ok" is not underlined as it was in the previous version, therefore indicating, that you can not press a key anymore to select it. **Exact steps for others to reproduce the error** Select a face of the standart cube. Press "u" to open the unwrap menu. Press "f" to select the "follow active quad" option to confirm the settings, you have to confirm now with the mouse, click on "Ok". Earlier you just hit "o".
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @LinoThomas

Added subscriber: @LinoThomas

Added subscriber: @NikoLeopold

Added subscriber: @NikoLeopold

does "u f " not work for you? that works here on Arch Linux using 2.75a.

does "u f <Enter>" not work for you? that works here on Arch Linux using 2.75a.
Author

"u f enter" works, but is way slower to type than "u f o", therefore i do not use this combination.
My "u f o" is gone and i would like to have it back ;)

"u f enter" works, but is way slower to type than "u f o", therefore i do not use this combination. My "u f o" is gone and i would like to have it back ;)

This issue was referenced by 20bd253809

This issue was referenced by 20bd253809ff5e45270212d0afb2c68fd346944e
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45713
No description provided.