Fix T45713: Numselect for confirm popup not working anymore